Changes before Firebase Studio auto-run

--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -8,5 +8,16 @@
     "https://www.googleapis.com/auth/gmail.modify",
     "https://www.googleapis.com/auth/cloud-platform",
     "https://www.googleapis.com/auth/script.external_request"
-  ]
+  ],
+  "addOns": {
+    "common": {
+      "name": "AI Organizer",
+      "logoUrl": "https://www.gstatic.com/images/icons/material/system/1x/mail_black_24dp.png",
+      "homepageTrigger": {
+        "runFunction": "onHomepage",
+        "enabled": true
+      }
+    },
+    "gmail": {}
+  }
 }
